# miniseq

./: LICENSE  README.md  pyproject.toml
examples/: README.md
examples/icl_benchmark/: README.md  layers.py  model.py  recipe.py  tasks.py
examples/prefixshare_benchmark/: README.md  benchmark.py  requirements.txt
examples/prefixshare_benchmark/results/: config.yaml  nll_2_qwen7b.csv
examples/scripts/: README.md
examples/scripts/rl/: README.md  countdown.py  dr_grpo.py  gsm8k.py  math_benchmark.py  math_eval.py  parse.sh  run_countdown_qwen2.5-3b.sh  run_drgrpo.sh  run_gsm8k.sh  ultrafeedback.py
examples/scripts/sft/: README.md  gsm8k.py
miniseq/: __init__.py  _lazy.py  builder_config.py  checkpoint.py  entry.py  evaluator.py  logging.py  machine.py  metric_bag.py  runtime.py  trainer.py  utils.py
miniseq/cli/: __init__.py  _constructors.py  _tyro_cli.py
miniseq/cli/_tyro_patch/: _help_formatter.py  _tyro_parser_patch.py
miniseq/configs/: __init__.py  _data.py  _dp.py  _generation.py  _optimizer.py  _recipe.py  _scheduler.py  _training.py  _utils.py
miniseq/data/: __init__.py  _batch.py  _common.py  _hf_dataset.py  _instruct.py  _packed.py  _pipeline.py  _preference.py  _prompt.py  _tokenizer.py  _trajectory.py  _utils.py
miniseq/datasets/: __init__.py  _hf_prompt_dataset.py  _prompt_builder.py  _scorer.py  _verifiers.py  math_verify.py
miniseq/generation/: __init__.py  _base.py  _vllm.py
miniseq/metrics/: __init__.py  _aggregation.py  _base.py  _synclib.py  _toolkit.py
miniseq/models/: __init__.py  _builder.py  _download.py  _loader.py  _lora.py  _registry.py  _utils.py
miniseq/models/llama/: __init__.py  _archs.py  _checkpoint.py
miniseq/models/qwen/: __init__.py  _archs.py  _checkpoint.py
miniseq/nn/: __init__.py  _common.py  _lr_scheduler.py  _ops.py
miniseq/recipes/: __init__.py  _common.py  _evaluate.py  _online.py  _preference.py  _setup_model.py  _tune.py
miniseq/recipes/algorithm/: __init__.py  _common.py  _metrics.py  generator_eval.py  instruction_tune.py
miniseq/recipes/algorithm/online/: __init__.py  _base.py  _grpo.py
miniseq/recipes/algorithm/preference/: __init__.py  _dpo.py
miniseq/training/: __init__.py  _ac.py  _checkpoint.py  _device_memory.py  _gradient.py  _profile.py  _rng.py  _stopwatch.py  _writer.py
miniseq/training/data_parallel/: __init__.py  _data_parallel.py  _ddp.py  _fsdp2.py
miniseq/transformer/: __init__.py  _attention.py  _attention_mask.py  _cce.py  _decoder.py  _flex_attention.py  _positional.py  _sdpa.py  _transformer.py
tests/: test_machine.py  test_trainer.py  test_utils.py
tests/data/: test_attention_masking.py  test_batch.py  test_common.py  test_data_utils.py  test_hf_dataset.py  test_instruct.py  test_packed.py  test_packing.py  test_packing_and_reduction.py  test_pipeline.py  test_preference.py  test_prompt.py  test_tokenizer.py  test_trajectory.py
tests/datasets/: test_prompt_builder.py  test_scorer.py  test_verifiers.py
tests/metrics/: test_aggregation.py  test_toolkit.py
tests/models/: test_lora.py
tests/transformer/: test_attention.py  test_decoder.py
